fix: burger menu z-index

--- a/src/components/BurgerMenu/BurgerMenu.module.scss
+++ b/src/components/BurgerMenu/BurgerMenu.module.scss
@@ -15,6 +15,7 @@
 
 .burger {
   position: absolute;
+  z-index: 10;
   top: 111px;
   left: 0;
   right: 0;
